# darling-newlkm

./: .gitignore  CMakeLists.txt  Makefile  README  api.h  clang_to_gcc_atomic.h  lkm-make
EXTERNAL_HEADERS/: stdatomic.h  stdint.h
EXTERNAL_HEADERS/architecture/: byte_order.h
bsd/duct/: duct_dev_arch_systemcalls.c  duct_kern_bsd_init.c  duct_kern_bsd_stubs.c  duct_kern_kern_descrip.c  duct_kern_kern_fork.c  duct_kern_kern_proc.c  duct_kern_kern_sig.c  duct_kern_kern_subr.c  duct_kern_kern_time.c  duct_uxkern_ux_exception.c
bsd/i386/: setjmp.h
darling/: api.h  binfmt.c  binfmt.h  binfmt_loader.c  binfmt_stack.c  commpage.c  commpage.h  continuation-asm.S  continuation.c  continuation.h  debug_print.h  down_interruptible.c  down_interruptible.h  evprocfd.c  evprocfd.h  evpsetfd.c  evpsetfd.h  foreign_mm.c  foreign_mm.h  host_info.c  isr.c  isr.h  isr_proc.S  kqueue.c  kqueue.h  license.c  loader.c  module.c  module.h  procs.c  procs.h  psynch_support.c  psynch_support.h  pthread_internal.h  pthread_kext.c  pthread_kext.h  pthread_kill.c  syscall_args.h  task_registry.c  task_registry.h  (+6 more)
dthread/: README.md  kern_internal.h  kern_synch.c  pthread_kext.c  pthread_kext.h  workqueue_internal.h
libkern/kxld/: CMakeLists.txt
linux/: api.h  compat_kevmachportfd.c  compat_kevmachportfd.h  debug_print.h  down_interruptible.c  down_interruptible.h  host_info.c  task_registry.c  task_registry.h  traps.c  traps.h
overlayfs/: copy_up.c  dir.c  export.c  file.c  inode.c  namei.c  overlayfs.h  ovl_entry.h  readdir.c  super.c  util.c
security/: mac_label.c
(+471 files in other folders)
